Basic CRUD complete

--- a/crud/templates/crud/base.html
+++ b/crud/templates/crud/base.html
@@ -5,6 +5,7 @@
         <title>{% block title %} {% endblock %}</title>
 
         <meta name="dj4e" content="0ad5292c158f3924f8b480367fcbeb94">
+        <meta name="dj4e-code" content="42160162061418">
 
         <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
