--- a/crud/templates/crud/main.html
+++ b/crud/templates/crud/main.html
@@ -8,8 +8,8 @@
         <h1>Basic CRUD App</h1>
         {% if request.user.is_authenticated %}
             <ul>
-                <li><p>Try <a href="#">Autos crud</a></p></li>
-                <li><p>Try <a href="#">Cats crud</a></p></li>
+                <li><p>Try <a href="{% url 'autos_all' %}">Autos crud</a></p></li>
+                <li><p>Try <a href="{% url 'cats_all' %}">Cats crud</a></p></li>
             </ul>
             <p><a href="{% url 'logout'%}?next={% url 'main' %}">Logout</a></p>
         {% else %}
