--- a/crud/templates/registration/login.html
+++ b/crud/templates/registration/login.html
@@ -19,7 +19,7 @@ Login Page
 <form method = "POST" action = "{% url 'login'%}">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="login">
+    <input type="submit" value="Login">
     <input type="hidden" name="next" value="{{ next }}">
 </form>
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
